Fixes confirmdelete message alignment.

--- a/src/components/ConfirmDelete.css
+++ b/src/components/ConfirmDelete.css
@@ -24,6 +24,7 @@
 
 .ConfirmDelete__Message {
     margin-top: 0.4rem;
+    text-align: center;
 }
 
 .ConfirmDelete__Button-Wrapper {
